# legend_lar

./: .gitignore  README.md  pyproject.toml
src/legend_lar/: __init__.py  bce_trainer.py  conditional_trainer.py  trainer.py  unconditional_trainer.py
src/legend_lar/calibration/: __init__.py  kfold_ensemble.py  nre_c_inference.py  prefix_scan.py  type1.py
src/legend_lar/data/: __init__.py  collate_fn.py  dataset.py
src/legend_lar/kernels/: __init__.py  autograd.py  kernels.py  ops.py
src/legend_lar/kfold_ensemble/: __init__.py  base.py  conditional.py  contrastive.py  kfold_ensemble.py  nre_c.py  nre_c_ds.py  unconditional.py
src/legend_lar/model/: __init__.py  block.py  cls.py  encoder.py  layers.py  mha.py  mlp.py  model.py  pos_embedding.py  segment_cumsum.py  tokenizer.py  transforms.py
src/legend_lar/utils/: __init__.py  calibration.py  configs.py  create_base_dataset.py  db.py  geom_decoder.py  initRNG.py  pack_data.py  torch_config.py
