[build-system]
requires = [
    "setuptools>=42.0.0",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "legend_lar"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name="Niko Nanda Putra Nila Lay", email="nikonandap.lay@tum.de" }
]
license = { file="LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["legend_lar*"]
